# beamz9000

./: .gitignore  LICENSE  README.md  beamz_scratch.ipynb  development_scratch.ipynb  pyproject.toml  svg_scratch.ipynb
beamz9000/: __init__.py  beam_plotter.py  constructors.py  graphics.py  model.py  svg_to_path.py
